<resources>
    <string name="app_name">École de karaté</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="combat">Combat</string>
    <string name="examen">Examen</string>
    <string name="anciennete">Anciennete</string>
    <string name="communication">Communication</string>
    <string name="accueil">Accueil</string>
    <string name="messagerie">Messagerie</string>
    <string name="text_combat">Page de combat!</string>
    <string name="text_messagerie">Page de messagerie!</string>
    <string name="text_examen">Page d\'examen!</string>
    <string name="text_anciennte">Page d\'ancienneté</string>
    <string name="text_Connexion">Connexion</string>
    <string name="btn_text_connexion">connexion</string>
    <string name="test_etat_connexion">Déconnecté</string>
    <string name="test_etat_connexion_reussi">Connecté avec : %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text__messagerie">Messagerie</string>
    <string name="button_messagePublic" >Message Public</string>
    <string name="button_messagePrive" >Message Privé</string>
    <string name="text_dernierMessagePublic">dernier message public</string>
    <string name="text_dernierMessagePrive">dernier message privé</string>
    <string name="button_examenReeussi">Examen réussi</string>
    <string name="button_examenEchec">examen échec</string>
    <string name="text_etat_examen">État de l\'examen</string>

    <string name="button_anciennete">Anciennete</string>
    <string name="text_etat_anciennte">État de l\'anciennete</string>

    <string name="ceinture">Ceinture : %1$s , Role : %2$s</string>
    <string name="header_points">Points : %1$s , Crédits : %2$s</string>
    <string name="ceinture_Anonyme"> </string>
    <string name="email_Anonyme" />
    <string name="alias_Anonyme">Anonyme</string>
    <string name="ailleurs">ailleurs</string>
    <string name="spectateur">spectateur</string>
    <string name="attente">attente</string>
    <string name="list_Ailleurs">Liste ailleurs :\n</string>
    <string name="liste_Spectateur">Liste spectateur :\n</string>
    <string name="liste_Attente">Liste attente :\n</string>
    <string name="etre_arbitre">Je veux être arbitre</string>
    <string name="liste_Arbitre">Liste arbitre :</string>
    <string name="button_gagner">Gagner</string>
    <string name="button_perdre">Perdre</string>
    <string name="button_nul">Nul</string>
    <string name="button_arbittre_sansFautes" >Abritre sans fautes</string>
    <string name="button_arbittre_avecFautes">Arbitre avec fautes</string>
    <string name="button_deconnexion">Déconnexion</string>

    <string name="titre_historique">Historique</string>
    <string name="titre_historique_combat">Historique de combat</string>
    <string name="Points">Points : %1$s</string>
    <string name="Credits">Credits : %1$s</string>
    <string name="titre_historique_examen">Historique d\'examen</string>
    <string name="no_data_available">Ce compte n\'a passé aucun examen</string>

</resources>
