<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AccueilFragment">


    <TextView
        android:id="@+id/txtMessagerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text__messagerie"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMessagePublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="116dp"
        android:text="@string/button_messagePublic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMessagePrive"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="52dp"
        android:text="@string/button_messagePrive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDernierMessagePublic"
        android:layout_width="135dp"
        android:layout_height="194dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_dernierMessagePublic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMessagePublic"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtDernierMessagePrive"
        android:layout_width="134dp"
        android:layout_height="193dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_dernierMessagePrive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMessagePrive"
        app:layout_constraintVertical_bias="0.008" />
</android.support.constraint.ConstraintLayout>